--- a/CraftyCode/CraftyCode.csproj
+++ b/CraftyCode/CraftyCode.csproj
@@ -64,6 +64,7 @@
     <Compile Include="CraftyInstance.cs" />
     <Compile Include="CraftyException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TokenPattern.cs" />
     <Compile Include="TreeBranch.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
